css/custom.css
/* your styles go here */
.testimonial {
  display: inline;
}
.owl-carousel .owl-item {
  text-align: -webkit-center;
  width: 50%;
  align-items: center;
}
.owl-carousel .owl-item img{
  width: 50%;
  align-items: center;
}
.about-me-image {
  background-size: cover;
  height: 450px;
  width: 450px;
}
.bg-image {
  /* background-color: rgba(0, 0, 0, 0.9); */
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center center;
}
.bg-gradient2 {
  background: -webkit-gradient(linear, left top, left bottom, from(#4fbfa8), to(#74cdba)) !important;
  background: linear-gradient(to bottom, #fff, #222) !important;
  color: #fff;
}
.contact-color {
  background-color: #4fbfa8;
}
.contact-header {
  color: #ffffff;
}
.contact-text {
  color: #000000;
}
nav.navbar.navbar-trans {
  background-color: transparent;
}
nav.navbar.navbar-trans a.nav-link {
  color: #ffffff;
}
nav.navbar.navbar-reduce {
  background: #ffffff;
  border-bottom: 1px solid #e6e6e6
}

